cabal-version:      3.0
name:               qq-bytes
version:            1.0.0.0
synopsis:           QuasiQuoter for byte sequence
description:
    QuasiQuoter for byte sequence and FromBytes typeclass.
category:           Text
license:            Apache-2.0
license-file:       LICENSE
author:             0y2k
maintainer:         0x0y2k@gmail.com
build-type:         Simple
extra-doc-files:
      CHANGELOG.md
    , README.md

common depends
    build-depends:
          base ^>= 4.18.2.1
        , bytestring

common warnings
    ghc-options: -Wall

library
    import:           depends, warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
          template-haskell
    exposed-modules:
          Data.Bytes.QuasiQuoter

test-suite qq-bytes-test
    import:           depends, warnings
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-tool-depends:
        tasty-discover:tasty-discover
    build-depends:
          qq-bytes
        , hedgehog
        , tasty
        , tasty-hedgehog
        , tasty-hunit
    other-modules:
          QuasiQuoter
